# fleet-recruiter-ai-agent

./: .gitignore  README.md  pyproject.toml
src/fleet_recruiter_ai_agent/: config.py  main.py  models.py
src/fleet_recruiter_ai_agent/api/: app.py
src/fleet_recruiter_ai_agent/data/: __init__.py  jobs.py
src/fleet_recruiter_ai_agent/schemas/: __init__.py  analysis.py  enrichment.py  evaluations.py  jobs.py  memory.py  resume.py
src/fleet_recruiter_ai_agent/services/: agent.py  evaluation_store.py  evaluator.py  llm.py
src/fleet_recruiter_ai_agent/services/memory/: __init__.py  chunking.py  job_memory.py  store.py
src/fleet_recruiter_ai_agent/tools/: __init__.py  github_enrichment.py  jd_analysis.py  pdf_extraction.py  resume_analysis.py  scorecard_evaluation.py
ui/: components.json  package.json  vite.config.ts
ui/src/: routeTree.gen.ts
ui/src/components/: DefaultCatchBoundary.tsx  NotFound.tsx
ui/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx
ui/src/routes/: __root.tsx  evaluations.$evaluationId.tsx  index.tsx  jobs.$jobId.tsx
ui/src/styles/: app.css
ui/src/utils/: api.ts
