[project]
name = "fleet-recruiter-ai-agent"
version = "0.1.0"
description = "Python backend scaffold for a fleet recruiter AI agent."
readme = "README.md"
authors = [
    { name = "SiddharthaGogoi", email = "lezaroth3@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.46.0",
]

[project.scripts]
fleet-recruiter-ai-agent = "fleet_recruiter_ai_agent:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
